syntax = "proto3";


package inventory.v1;

import "google/protobuf/timestamp.proto";

option go_package = "back/GoSpaceShipService/shared/pkg/proto/inventory/v1;inventory_v1";

//Service for Get inventory, 
service InventoryService{
    //Get info about detail by uuid 
    rpc GetPart(GetPartRequest) returns (GetPartResponse);

    //Get list of details according to filter
    rpc ListParts(ListPartsRequest) returns (ListPartsResponse);
}

//Part contain info about detail
message Part{
    string uuid = 1;
    string name = 2;
    string description = 3;
    double price = 4;
    int64 stock_quantity = 5;
    Category category = 6;
    Dimensions dimensions = 7;
    Manufacturer manufacturer = 8;
    repeated string tags = 9;
    map<string, Value> metadata = 10;
    google.protobuf.Timestamp created_at = 11;
    google.protobuf.Timestamp updated_at =12;
}

//Dimensions it's message used in message Part
message Dimensions{
    double length = 1;
    double width = 2;
    double height = 3;
    double weight = 4;
}

//Manufacturer it's message used in message Part
message Manufacturer{
    string name = 1;
    string country = 2;
    string website = 3;
}

//Value it's message used in message part
message Value{
    oneof kind{
        string string_value = 1;
        int64 int64_value = 2;
        double double_value = 3;
        bool bool_value = 4;
    }
}
//enum type Category for message type
enum Category{
    CATEGORY_UNKNOWN_UNSPECIFIED = 0;
    CATEGORY_ENGINE = 1;
    CATEGORY_FUEL = 2;
    CATEGORY_PORTHOLE = 3;
    CATEGORY_WING = 4;
}

//Get request with uuid of detail, for searching
message GetPartRequest{
    string uuid = 1;
}

//Get response with part according uuid in GetRequest
message GetPartResponse{
    Part part = 1;
}

//Request for method ListParts contains filters for searching details
message ListPartsRequest{
    PartsFilter filter = 1;
}

//message PartsFilter contains parameters for searching details
message PartsFilter{
    repeated string uuids = 1;
    repeated string names = 2;
    repeated Category categories = 3;
    repeated string manufacturer_countries = 4;
    repeated string tags = 5;
}

//Response for method ListPart contains found parts
message ListPartsResponse{
    repeated Part parts = 1;
}